# ceres-python

./: .coveragerc  .gitignore  MANIFEST.in  README.md  build-docs.sh  build.sh  requirements.txt  runtests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
ceres/: __init__.py  body.py  component.py  constants.py  dynamics.py  events.py  keplerorbit.py  keplerorbits.py  orbit.py  rigidbody.py  rotations.py  scene.py  spacecraft.py
ceres/actuators/: __init__.py  thruster.py
ceres/components/: landmarks.py
ceres/components/actuators/: radio.py
ceres/components/forces/: radiationpressure.py
ceres/constants/: constants.py
ceres/dynamics/: __init__.py  dynamics.py
ceres/environment/gravity/: __init__.py  gravityfield.py  pointmass.py
ceres/geometry/: __init__.py  ray.py  surface.py
ceres/gravity/: __init__.py  pointmass.py
ceres/objects/: celestialbody.py
ceres/orbits/: __init__.py  twobody.py
ceres/plotting/: __init__.py  plotlyplanets.py  plotlyutils.py
ceres/rotations/: __init__.py  quaternion.py  rotationmatrix.py
ceres/sensors/: __init__.py  antenna_patterns.py  gyroscope.py  radio.py
ceres/spiceutils/: __init__.py  spiceorbit.py  spicerotation.py  spiceutils.py
docs/: CNAME  conf.py  index.rst
docs/custom_docs/: install.rst
docs/html/: .buildinfo  ceres.constants.html  ceres.gravity.html  ceres.html  ceres.models.gravity.html  ceres.models.html  ceres.objects.html  ceres.orbits.html  ceres.rotations.html  ceres.sensors.html  ceres.utils.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/ceres/: celestialbody.html  spacecraft.html
docs/html/_modules/ceres/gravity/: gravityfield.html  pointmass.html
docs/html/_modules/ceres/models/gravity/: gravityfield.html  pointmass.html
docs/html/_modules/ceres/objects/: celestialbody.html  spacecraft.html
docs/html/_modules/ceres/orbits/: twobody.html
docs/html/_modules/ceres/rotations/: quaternion.html  rotationmatrix.html
docs/html/_modules/ceres/sensors/: gyroscope.html
docs/html/_sources/: ceres.constants.rst.txt  ceres.gravity.rst.txt  ceres.models.gravity.rst.txt  ceres.models.rst.txt  ceres.objects.rst.txt  ceres.orbits.rst.txt  ceres.rotations.rst.txt  ceres.rst.txt  ceres.sensors.rst.txt  ceres.utils.rst.txt  index.rst.txt  modules.rst.txt
docs/html/_static/: documentation_options.js
examples/: draw_saturn.py  draw_solarsystem.py  earth_surface_gravity.py  groundstation_od.py  load_shape.py  orbit_draw.py  simple_orbit.py
scripts/: build.sh  docsgen.sh  run_all.sh  test.sh  update_requirements.sh
tests/: .coveragerc  test.py  test_models_gravity.py  test_objects.py  test_orbits.py  test_rotations.py
