[metadata]
name = ceres-nav
version = attr: ceres.__version__
long_description = file:README.MD
long_description_content_type = text/markdown
description = Celestial Estimation for Research, Exploration, and Science
author = Chris Gnam
author_email = crgnam@buffalo.edu
license = MIT
license_file = LICENSE
download_url = https://pypi.org/project/ceres-nav/
url = https://ceresnavigation.org/

[options]
zip_safe = False
include_package_data = True
packages = 
    ceres
    ceres.actuators
    ceres.sensors
    ceres.filters
    ceres.gravity
    ceres.plotting
    ceres.shapes
project_urls = 
    Source = https://github.com/ceres-navigation/ceres
    Documentation = https://docs.ceresnavigation.org/
    Bug Reports = https://github.com/ceres-navigation/ceres/issues

install_requires =
    numpy